Fix alignment problems of the month and navigation buttons.

--- a/client/src/pages/Calendar.css
+++ b/client/src/pages/Calendar.css
@@ -20,27 +20,26 @@
 
 .calendar-table th,
 .calendar-table td {
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     padding: 20px;
     text-align: center;
     cursor: pointer;
     font-size: 18px;
 }
 
-.calendar-table td:hover {
-    background-color: #f0f0f0;
-}
-
 .month-navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    gap: 40px;
+    margin-bottom: 40px;
 }
 
 .month-navigation h2 {
     font-size: 24px;
     color: white;
+    margin: 0;
+    line-height: 1;
 }
 
 .month-navigation button {
@@ -73,9 +72,4 @@
     font-size: 16px;
     margin: 5px 0;
     color: white;
-}
-
-.calendar-table td {
-    text-align: center;
-    font-size: 24px;
 }
